base/sooptalent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sooptalent-service
spec:
  selector:
    app.kubernetes.io/name: sooptalent
  ports:
    - name: http
      port: 80
      targetPort: http
